fix contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ nav li a {
 }
 
 nav li.active {
-    background-color: #04aa6d;
+    background-color: #005c39;
 }
 
 nav li a:hover {
